--- a/MavenProject/.classpath
+++ b/MavenProject/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/dcyoung/Documents/GitHub/DigitClassification/jheatchart-0.6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
